<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_grey"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/margin_15">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_menu" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_15"
            android:text="@string/header"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_18" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/add_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_green"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_8">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_camera" />

                    <androidx.appcompat.widget.AppCompatTextView
                        fontPath="fonts/Nunito-Bold.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_3"
                        android:text="@string/add_new"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_16" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/find_pet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_blue"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_8">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_search" />

                    <androidx.appcompat.widget.AppCompatTextView
                        fontPath="fonts/Nunito-Bold.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_3"
                        android:text="@string/find_pet"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_16" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ms_background_color="@color/grey"
                        app:ms_text_color="@color/black" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/most_recent_first"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/margin_5"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_white_black_border"
                        android:gravity="center"
                        android:paddingTop="@dimen/margin_10"
                        android:paddingBottom="@dimen/margin_10">

                        <me.grantland.widget.AutofitTextView
                            android:id="@+id/add_category_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="@string/most_recent_first"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14"
                            autofit:minTextSize="@dimen/textsize_12" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/next_reminder_first"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_white_black_border"
                        android:gravity="center"
                        android:paddingTop="@dimen/margin_10"
                        android:paddingBottom="@dimen/margin_10">

                        <me.grantland.widget.AutofitTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="@string/next_reminder_first"
                            android:textColor="@color/black"
                            autofit:minTextSize="@dimen/textsize_12" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/all_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/carousel_list"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_20" />

                <LinearLayout
                    android:id="@+id/details_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_5"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/add_reminder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/rectangle_orange_black_border"
                            android:gravity="center"
                            android:paddingTop="@dimen/margin_8"
                            android:paddingBottom="@dimen/margin_8">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/add_reminder_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:text="@string/add_reminder"
                                android:textColor="@color/black"
                                android:textSize="@dimen/textsize_14" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/selected_category_list"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_10" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/rectangle_dark_grey_border"
                            android:gravity="center"
                            android:paddingTop="@dimen/margin_8"
                            android:paddingBottom="@dimen/margin_8">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/photo_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/date"
                                android:textColor="@color/black" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:id="@+id/add_note_view"
                                android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:layout_marginTop="@dimen/margin_10"
                                android:background="@drawable/rectangle_white_black_border"
                                android:padding="@dimen/margin_10">

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/description_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/description_text"
                                    android:textColor="@color/black" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/no_record_added"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    fontPath="fonts/Nunito-Bold.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/no_record_added"
                    android:textColor="@color/red"
                    android:textSize="@dimen/textsize_18" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>