<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selected_category_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/main_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_view"
        android:layout_below="@+id/selected_category_list"
        android:paddingBottom="@dimen/margin_3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/images_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/images_recyclerview"
                    android:layout_margin="@dimen/margin_10"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/replace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_semi_grey"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/margin_8">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/ic_replace" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_3"
                            android:text="@string/replace"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/remove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_semi_grey"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/margin_8">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/ic_remove" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_3"
                            android:text="@string/remove"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/add_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_semi_grey"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/margin_8">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/ic_add" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_3"
                            android:text="@string/add_picture"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/add_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_5"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_white_black_border"
                    android:gravity="center"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8">

                    <me.grantland.widget.AutofitTextView
                        android:id="@+id/add_category_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/add_category"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_14"
                        autofit:minTextSize="@dimen/textsize_12" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_reminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_5"
                    android:layout_marginEnd="@dimen/margin_5"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_white_black_border"
                    android:gravity="center"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8">

                    <me.grantland.widget.AutofitTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/add_reminder_text"
                        android:gravity="center"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/add_reminder"
                        android:textColor="@color/black"
                        autofit:minTextSize="@dimen/textsize_12" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_5"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_white_black_border"
                    android:gravity="center"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/photo_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/date"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_note_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:background="@drawable/rectangle_white_black_border"
                android:padding="@dimen/margin_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_text"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/capture_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_view"
        android:layout_below="@+id/selected_category_list"
        android:background="#99000000"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/category_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_view"
        android:layout_below="@+id/selected_category_list"
        android:layout_marginEnd="@dimen/margin_10"
        android:paddingBottom="@dimen/margin_3"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/main_category_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_weight="0.8">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sub_category_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/bottom_view"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rectangle_red"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_8">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_cancel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_3"
                android:text="@string/cancel"
                fontPath="fonts/Nunito-Bold.ttf"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_16" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>

        <LinearLayout
            android:id="@+id/save_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rectangle_grey"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_8">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_save" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_3"
                fontPath="fonts/Nunito-Bold.ttf"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_16" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>